💄 Fix animation border style on mobile

--- a/src/app/sections/About/About.module.css
+++ b/src/app/sections/About/About.module.css
@@ -11,11 +11,11 @@
   content: '';
   position: absolute;
   z-index: -2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: scale(5);
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  width: 600%;
+  height: 600%;
   background: conic-gradient(#1f1f1f, #262626, #434343, #595959, #1f1f1f)
     no-repeat;
   animation: rotate 4s linear infinite;
@@ -35,7 +35,7 @@
 
 @keyframes rotate {
   100% {
-    transform: scale(5) rotate(1turn);
+    transform: rotate(1turn);
   }
 }
 
